--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dev_dependencies:
   build_runner: ^2.1.11
   json_serializable: ^6.2.0
   flutter_launcher_icons: ^0.9.3
+  flutter_dotenv: ^5.0.2
 
 flutter_icons:
   android: true
@@ -83,6 +84,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
     - assets/lottie/
 
